--- a/Proyecto/nbproject/project.properties
+++ b/Proyecto/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/TiendaDiscos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mail__1_.jar=E:\\mail (1).jar
 file.reference.mail__2_.jar=C:\\Users\\Anthonny\\Dropbox\\Programaci\u00f2n 2\\Libreria\\mail (2).jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mail__2_.jar}
+    ${file.reference.mail__2_.jar}:\
+    ${file.reference.mail__1_.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
