--- a/Proyecto/nbproject/project.properties
+++ b/Proyecto/nbproject/project.properties
@@ -28,9 +28,7 @@ dist.jar=${dist.dir}/TiendaDiscos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcommon-1.0.17.jar=C:\\Users\\Anthonny\\Dropbox\\Programaci\u00f2n 2\\Instaladores Programacion 2\\jcommon-1.0.17.jar
-file.reference.jcommon-1.0.23.zip-1=C:\\Users\\Admie21\\Downloads\\jcommon-1.0.23.zip
-file.reference.jfreechart-1.0.14.jar=C:\\Users\\Anthonny\\Dropbox\\Programaci\u00f2n 2\\Instaladores Programacion 2\\jfreechart-1.0.14.jar
-file.reference.jfreechart-1.0.19.zip-1=C:\\Users\\Admie21\\Downloads\\jfreechart-1.0.19.zip
+file.reference.jfreechart-1.0.14.jar=C:\\Users\\Admie21\\Downloads\\jfreechart-1.0.14.jar
 file.reference.mail__1_.jar=E:\\mail (1).jar
 file.reference.mail__2_.jar=C:\\Users\\Anthonny\\Dropbox\\Programaci\u00f2n 2\\Libreria\\mail (2).jar
 includes=**
@@ -38,8 +36,6 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mail__2_.jar}:\
     ${file.reference.mail__1_.jar}:\
-    ${file.reference.jcommon-1.0.23.zip-1}:\
-    ${file.reference.jfreechart-1.0.19.zip-1}:\
     ${file.reference.jcommon-1.0.17.jar}:\
     ${file.reference.jfreechart-1.0.14.jar}
 # Space-separated list of extra javac options
