--- a/Proyecto/nbproject/project.properties
+++ b/Proyecto/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcommon-1.0.17.jar=C:\\Users\\Anthonny\\Dropbox\\Programaci\u00f2n 2\\Instaladores Programacion 2\\jcommon-1.0.17.jar
 file.reference.jfreechart-1.0.14.jar=C:\\Users\\Admie21\\Downloads\\jfreechart-1.0.14.jar
+file.reference.jfreechart-1.0.14.jar-1=C:\\Users\\Anthonny\\Dropbox\\Programaci\u00f2n 2\\Instaladores Programacion 2\\jfreechart-1.0.14.jar
 file.reference.mail__1_.jar=E:\\mail (1).jar
 file.reference.mail__2_.jar=C:\\Users\\Anthonny\\Dropbox\\Programaci\u00f2n 2\\Libreria\\mail (2).jar
 includes=**
@@ -37,7 +38,8 @@ javac.classpath=\
     ${file.reference.mail__2_.jar}:\
     ${file.reference.mail__1_.jar}:\
     ${file.reference.jcommon-1.0.17.jar}:\
-    ${file.reference.jfreechart-1.0.14.jar}
+    ${file.reference.jfreechart-1.0.14.jar}:\
+    ${file.reference.jfreechart-1.0.14.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
