--- a/Proyecto/nbproject/project.properties
+++ b/Proyecto/nbproject/project.properties
@@ -27,11 +27,16 @@ dist.dir=dist
 dist.jar=${dist.dir}/TiendaDiscos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.basicplayer3.0.jar=C:\\Users\\Anthonny\\Dropbox\\Programaci\u00f2n 2\\Instaladores Programacion 2\\basicplayer3.0.jar
 file.reference.jcommon-1.0.17.jar=C:\\Users\\Anthonny\\Dropbox\\Programaci\u00f2n 2\\Instaladores Programacion 2\\jcommon-1.0.17.jar
 file.reference.jfreechart-1.0.14.jar=C:\\Users\\Admie21\\Downloads\\jfreechart-1.0.14.jar
 file.reference.jfreechart-1.0.14.jar-1=C:\\Users\\Anthonny\\Dropbox\\Programaci\u00f2n 2\\Instaladores Programacion 2\\jfreechart-1.0.14.jar
+file.reference.jl1.0.1.jar=C:\\Users\\Anthonny\\Dropbox\\Programaci\u00f2n 2\\Instaladores Programacion 2\\jl1.0.1.jar
+file.reference.jlgui3.0.jar=C:\\Users\\Anthonny\\Dropbox\\Programaci\u00f2n 2\\Instaladores Programacion 2\\jlgui3.0.jar
+file.reference.jmf.jar=C:\\Users\\Anthonny\\Dropbox\\Programaci\u00f2n 2\\Instaladores Programacion 2\\jmf.jar
 file.reference.mail__1_.jar=E:\\mail (1).jar
 file.reference.mail__2_.jar=C:\\Users\\Anthonny\\Dropbox\\Programaci\u00f2n 2\\Libreria\\mail (2).jar
+file.reference.mediaplayer.jar=C:\\Users\\Anthonny\\Dropbox\\Programaci\u00f2n 2\\Instaladores Programacion 2\\mediaplayer.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -39,7 +44,12 @@ javac.classpath=\
     ${file.reference.mail__1_.jar}:\
     ${file.reference.jcommon-1.0.17.jar}:\
     ${file.reference.jfreechart-1.0.14.jar}:\
-    ${file.reference.jfreechart-1.0.14.jar-1}
+    ${file.reference.jfreechart-1.0.14.jar-1}:\
+    ${file.reference.basicplayer3.0.jar}:\
+    ${file.reference.jmf.jar}:\
+    ${file.reference.jl1.0.1.jar}:\
+    ${file.reference.mediaplayer.jar}:\
+    ${file.reference.jlgui3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
