Cambios varios de parte de Anthonny Calderòn

--- a/Proyecto/nbproject/project.properties
+++ b/Proyecto/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.basicplayer3.0.jar=C:\\Users\\Anthonny\\Dropbox\\Programaci\u00f2n 2\\Instaladores Programacion 2\\basicplayer3.0.jar
 file.reference.basicplayer3.0.jar-1=C:\\Users\\Admie21\\Desktop\\basicplayer3.0.jar
+file.reference.jcalendar-1.3.3.jar=C:\\Users\\Anthonny\\Dropbox\\Programaci\u00f2n 2\\Instaladores Programacion 2\\jcalendar-1.3.3.jar
 file.reference.jcommon-1.0.17.jar=C:\\Users\\Anthonny\\Dropbox\\Programaci\u00f2n 2\\Instaladores Programacion 2\\jcommon-1.0.17.jar
 file.reference.jfreechart-1.0.14.jar=C:\\Users\\Admie21\\Downloads\\jfreechart-1.0.14.jar
 file.reference.jfreechart-1.0.14.jar-1=C:\\Users\\Anthonny\\Dropbox\\Programaci\u00f2n 2\\Instaladores Programacion 2\\jfreechart-1.0.14.jar
@@ -59,7 +60,8 @@ javac.classpath=\
     ${file.reference.jl1.0.1.jar-1}:\
     ${file.reference.jlgui3.0.jar-1}:\
     ${file.reference.jmf.jar-1}:\
-    ${file.reference.mediaplayer.jar-1}
+    ${file.reference.mediaplayer.jar-1}:\
+    ${file.reference.jcalendar-1.3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
